--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Auction Timer</title>
   <script>
     function startCountdown(createdAt) {
-      const countdownDuration = 20; // 10 seconds
+      const countdownDuration = 10; // 10 seconds
       const createdAtDate = new Date(createdAt);
       const countdownElement = document.getElementById('countdown');
       
@@ -17,7 +17,26 @@
         if (remainingSeconds > 0) {
           setTimeout(updateCountdown, 1000);
         } else {
+          const data = {
+                id: fk_id,
+                status: 'completed'
+            };
           countdownElement.textContent = "Time's up!";
+          fetch('http://ec2-3-110-122-35.ap-south-1.compute.amazonaws.com/update', {
+               method: 'POST',
+               headers: {
+                   'Content-Type': 'application/json'
+               },
+               body: JSON.stringify(data)
+           })
+           .then(response => response.json())
+           .then(result => {
+               alert('Feedback submitted successfully!');
+           })
+           .catch(error => {
+               console.error('Error:', error);
+               alert('Failed to submit feedback.');
+           });
         }
       }
 
@@ -30,7 +49,8 @@
     }
 
     window.onload = function() {
-      const createdAt = getQueryParam('created_at');
+      const createdAt = new Date();
+      const fk_id = getQueryParam('id');
       if (createdAt) {
         startCountdown(createdAt);
       } else {
