--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   <title>Auction Timer</title>
   <script>
     function startCountdown(createdAt) {
-      const countdownDuration = 10; // 10 seconds
+      const countdownDuration = 5; // 10 seconds
       const createdAtDate = new Date(createdAt);
       const countdownElement = document.getElementById('countdown');
       const fk_id = getQueryParam('id');
       
       function updateCountdown() {
-        const fk_id = getQueryParam('id');
         const now = new Date();
         const elapsedSeconds = (now - createdAtDate) / 1000;
         const remainingSeconds = Math.max(0, countdownDuration - elapsedSeconds);
@@ -19,11 +18,12 @@
         if (remainingSeconds > 0) {
           setTimeout(updateCountdown, 1000);
         } else {
+          countdownElement.textContent = "Time's up!";
           const data = {
                 id: fk_id,
                 status: 'completed'
             };
-          countdownElement.textContent = "Time's up!";
+          
           fetch('http://ec2-3-110-122-35.ap-south-1.compute.amazonaws.com:5000/update', {
                method: 'POST',
                headers: {
@@ -51,8 +51,12 @@
     }
 
     window.onload = function() {
+      //const createdAt = getQueryParam('created_at');
       const createdAt = new Date();
       const fk_id = getQueryParam('id');
+      //document.write(fk_id)
+      //const createdAt = 'Mon, 05 Aug 2024 18:06:25 GMT'
+
       if (createdAt) {
         startCountdown(createdAt);
       } else {
