--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 <head>
   <title>Auction Timer</title>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <script>
+    
     function startCountdown(createdAt) {
       const countdownDuration = 5; // 10 seconds
       const createdAtDate = new Date(createdAt);
@@ -67,6 +69,7 @@
   </script>
 </head>
 <body>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <div>
     Time remaining: <span id="countdown"></span> seconds
   </div>
