--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                headers: {
                    'Content-Type': 'application/json'
                },
-               body: JSON.stringify(data)
+               body: JSON.stringify(data),
+            referrerPolicy: "unsafe-url" 
            })
            .then(response => response.json())
            .then(result => {
