--- a/index.html
+++ b/index.html
@@ -3,20 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Timer Example</title>
-  <style>
-    #status {
-      font-size: 1.5em;
-      margin-bottom: 10px;
-    }
-    #timer {
-      font-size: 2em;
-    }
-  </style>
+  <title>Auction Timer</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="status">Status: Loading...</div>
-  <div id="timer">Timer: --</div>
+  
+  <div><span id="timer"></span> </div>
 
   <script src="app.js"></script>
 </body>
