--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       border-radius: 25px;
       overflow: hidden;
       margin: 20px 0;
+      position: relative;
     }
     .progress-bar {
       height: 30px;
@@ -28,34 +29,57 @@
     .progress-bar.red {
       background-color: red;
     }
+    .completed {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #e0e0e0;
+      color: black;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
   <div class="progress-container">
-    <div class="progress-bar" id="progress-bar">20s</div>
+    <div class="progress-bar" id="progress-bar">10s</div>
+    <div class="completed" id="completed" style="display: none;">Bid Completed</div>
   </div>
 
   <script>
     const progressBar = document.getElementById('progress-bar');
+    const completedText = document.getElementById('completed');
+
     function getQueryParam(param) {
       const urlParams = new URLSearchParams(window.location.search);
       return urlParams.get(param);
     }
 
     const fk_id = getQueryParam('id');
-
+    
     const fetchTimer = async () => {
       try {
         const response = await fetch('https://historical-outgoing-floor.glitch.me/check-timer/'+fk_id);
         const data = await response.json();
 
-        const { remainingTime, status } = data.status;
-        //const remainingTime = Math.ceil(remainingTime1);
-        //console.log(remainingTime);
+        const { remainingTime, status } = data;
+
+        if (status === 'completed') {
+          // Display "Bid Completed" text and hide the progress bar
+          progressBar.style.display = 'none';
+          completedText.style.display = 'flex';
+          clearInterval(timerInterval);
+          return;
+        }
+
         // Update progress bar
         const percentage = (remainingTime / 20) * 100;
         progressBar.style.width = percentage + '%';
-        progressBar.textContent = remainingTime + 's';
+        progressBar.textContent = Math.ceil(remainingTime) + 's';
 
         // Change color based on time left
         if (remainingTime <= 3) {
@@ -67,12 +91,6 @@
         } else {
           progressBar.classList.remove('yellow', 'red');
           progressBar.classList.add('green');
-        }
-
-        // Handle timer completion logic
-        if (status === 'completed') {
-          clearInterval(timerInterval);
-          progressBar.textContent = 'Completed';
         }
       } catch (error) {
         console.error('Error fetching timer:', error);
