--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         const response = await fetch('https://historical-outgoing-floor.glitch.me/check-timer/'+fk_id);
         const data = await response.json();
 
-        const { remainingTime, status } = data;
+        const { remainingTime, status } = data.status;
 
         if (status === 'completed') {
           // Display "Bid Completed" text and hide the progress bar
