--- a/index.html
+++ b/index.html
@@ -1,107 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Auction Timer</title>
-  <style>
-    .progress-container {
-      width: 100%;
-      background-color: #e0e0e0;
-      border-radius: 25px;
-      overflow: hidden;
-      margin: 20px 0;
-      position: relative;
-    }
-    .progress-bar {
-      height: 30px;
-      width: 100%;
-      background-color: green;
-      text-align: center;
-      line-height: 30px;
-      color: white;
-      border-radius: 25px 0 0 25px;
-    }
-    .progress-bar.yellow {
-      background-color: yellow;
-      color: black;
-    }
-    .progress-bar.red {
-      background-color: red;
-    }
-    .completed {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: #e0e0e0;
-      color: black;
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
-  <div class="progress-container">
-    <div class="progress-bar" id="progress-bar">10s</div>
-    <div class="completed" id="completed" style="display: none;">Bid Completed</div>
-  </div>
+<!-- Coding By CodingNepal - codingnepalweb.com -->
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title> Circular Progress Bar </title>
 
-  <script>
-    const progressBar = document.getElementById('progress-bar');
-    const completedText = document.getElementById('completed');
+        <!-- CSS -->
+        <link rel="stylesheet" href="style.css">
+                                        
+    </head>
+    <body>
+        <div class="container">
+            <div class="circular-progress">
+                <span class="progress-value">0s</span>
+            </div>
 
-    function getQueryParam(param) {
-      const urlParams = new URLSearchParams(window.location.search);
-      return urlParams.get(param);
-    }
+            <span class="text">Time Left</span>
+        </div>
 
-    const fk_id = getQueryParam('id');
-    
-    const fetchTimer = async () => {
-      try {
-        const response = await fetch('https://historical-outgoing-floor.glitch.me/check-timer/'+fk_id);
-        const data = await response.json();
-
-        const { remainingTime, status } = data.status;
-
-        if (status === 'completed') {
-          // Display "Bid Completed" text and hide the progress bar
-          progressBar.style.display = 'none';
-          completedText.style.display = 'flex';
-          clearInterval(timerInterval);
-          return;
-        }
-
-        // Update progress bar
-        const percentage = (remainingTime / 20) * 100;
-        progressBar.style.width = percentage + '%';
-        progressBar.textContent = Math.ceil(remainingTime) + 's';
-
-        // Change color based on time left
-        if (remainingTime <= 3) {
-          progressBar.classList.remove('yellow');
-          progressBar.classList.add('red');
-        } else if (remainingTime <= 5) {
-          progressBar.classList.remove('green');
-          progressBar.classList.add('yellow');
-        } else {
-          progressBar.classList.remove('yellow', 'red');
-          progressBar.classList.add('green');
-        }
-      } catch (error) {
-        console.error('Error fetching timer:', error);
-      }
-    };
-
-    // Fetch timer every second
-    const timerInterval = setInterval(fetchTimer, 1000);
-
-    // Initial call to set progress bar width
-    fetchTimer();
-  </script>
-</body>
+        <!-- JavaScript -->
+        <script src="app.js"></script>
+    </body>
 </html>
